# recomm-town

./: .gitignore  LICENSE  README.md  graph.py  heatmap.py  main.py  plot.ipynb  pyproject.toml  runner.sh
.github/workflows/: pyinstaller-actions.yml
src/: actions.py  app.py  common.py  human.py  recomm.spec  town.py  world.py
src/recomm_town/: __main__.py  actions.py  app.py  common.py  draw.py  generic_main.py  human.py  observer.py  program.py  reporter.py  window_main.py  world.py
src/recomm_town/assets/textures/: activities.xcf  blobs.xcf  human.xcf  learnbar.xcf  levels.xcf  rooms.xcf
src/recomm_town/assets/towns/: community.yaml  isolated.yaml  mixed.yaml  shy.yaml  trivias.yaml
src/recomm_town/creator/: default.py  helpers.py  isolated.py  parser.py  people_factory.py  room_factories.py  trivias.py
src/recomm_town/draw/: consts.py  draw.py  textures.py  track_human.py  utils.py
src/recomm_town/draw/widgets/: activity.py  level_arc.py
src/recomm_town/human/: __init__.py  activity.py  emotion.py  human.py  level.py
src/recomm_town/shaders/: __init__.py  animated_line.py  arc.py  curve_line.py  human_group.py  rounded_rectangle.py  sprite.py
src/recomm_town/town/: __init__.py  place.py  routes.py  routes_factory.py  town.py
src/town/: place.py  routes.py  routes_factory.py  town.py
textures/: activities.xcf  human.xcf  learnbar.xcf
towns/: community.yaml  isolated.yaml  mixed.yaml  trivias.yaml
